--- a/assets/css/componentes/toast.css
+++ b/assets/css/componentes/toast.css
@@ -31,16 +31,27 @@
     width: 40px;
     height: 40px;
     justify-self: center;
-}
-
-.tost__icon-check{
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.tost__icon-check::before{
+.tost__icon-sucesso::before{
     content: "\f00c";
+    font-family: var(--icon);
+    color: var(--azul-acinzentado-700);
+    font-size: 1.5rem;
+}
+
+.tost__icon-editado::before{
+    content: "\f304";
+    font-family: var(--icon);
+    color: var(--azul-acinzentado-700);
+    font-size: 1.5rem;
+}
+
+.tost__icon-erro::before{
+    content: "\f00d";
     font-family: var(--icon);
     color: var(--azul-acinzentado-700);
     font-size: 1.5rem;
