--- a/assets/css/base/variaveis.css
+++ b/assets/css/base/variaveis.css
@@ -4,6 +4,7 @@
     --azul-acinzentado-900: #263238;
     --azul-acinzentado-700: #455a64;
     --azul-acinzentado-200: #b0bec5;
+    --azul-acinzentado-100: #cfd8dc;
     --branco: #ffffff;
     --cerceta-400: #26a69a;
 
